<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">棒壘好壞球計數器</string>
    <string name="actionbar_about">關於</string>
    <string name="actionbar_bugreport">BUG回報</string>
    <string name="actionbar_rating">評分</string>
    <string name="actionbar_options">設定</string>
    <string name="dialog_message">chihungdevelop.gmail.com</string>
    <string name="dialog_title">問題回報與建議</string>
    <string name="dialog_action_dismiss">確定</string>
    <string name="layout_team">隊伍</string>
    <string name="layout_visitingteam">先攻</string>
    <string name="layout_hometeam">後攻</string>
    <string name="layout_runs">得分</string>
    <string name="layout_addscore">進分</string>
    <string name="layout_reducescore">退分</string>
    <string name="layout_hit">安打</string>
    <string name="layout_pause">暫停</string>
    <string name="layout_sports">比賽項目</string>
    <string name="layout_baseball">棒球</string>
    <string name="layout_softball">慢速壘球</string>
    <string name="layout_gametime">比賽時間</string>
    <string name="layout_minute">分鐘</string>
    <string name="layout_handicap">讓分</string>
    <string name="layout_playball">比賽開始</string>
    <string name="layout_givepointstovisiting">讓分給先攻隊</string>
    <string name="layout_givepointstohome">讓分給後攻隊</string>
    <string name="layout_give">讓</string>
    <string name="layout_point">分</string>
    <string name="layout_cancel">取消</string>
    <string name="layout_done">完成</string>
    <string name="pleasechoicesport">請先選擇比賽項目</string>
    <string name="editor">作者</string>
    <string name="vername">版本號</string>
    <string name="close">關閉</string>
    <string name="gotoplayrating">到Google Play為本程式評分吧！</string>
    <string name="noneforever">永遠不需要</string>
    <string name="nonenow">現在還不要</string>
    <string name="gotorating">去評分</string>
    <string name="messege">訊息</string>
    <string name="addstrike">您確定要『增加』一個『好球數』嗎？</string>  
    <string name="yes">是的</string>
    <string name="reducestrike">您確定要『減少』一個『好球數』嗎？</string>
    <string name="strikelow0">好球數不能少於0</string>
    <string name="addball">您確定要『增加』一個『壞球數』嗎？</string>
    <string name="reduceball">您確定要『減少』一個『壞球數』嗎？</string>
    <string name="balllow0">壞球數不能少於0</string>
    <string name="addout">您確定要『增加』一個『出局數』嗎？</string>
    <string name="runnerout">跑者出局</string>
    <string name="hitterout">打者出局</string>
    <string name="reduceout">您確定要『減少』一個『出局數』嗎？</string>
    <string name="outlow0">出局數不能少於0</string>
    <string name="addscore">您確定要『進分』嗎？</string>
    <string name="reducescore">您確定要『退分』嗎？</string>
    <string name="scorelow">分數不能為負</string>
    <string name="addhit">你確定增加一個『安打』數嗎？</string>
    <string name="out">出局</string>
    <string name="pass">保送</string>
    <string name="change">三出局攻守交換</string>
    <string name="doubleclick">再按一次結束計數</string>
    <string name="strikelow1">好球數不能少於1</string>
    <string name="balllow1">壞球數不能少於1</string>
    <string name="timesup">時間到</string>
    <string name="gametimesup">比賽時間到</string>
    <string name="pausetoast">時間尚未暫停，欲暫停請先按下暫停紐</string>
    <string name="timeisover">計時已結束</string>
    <string name="gameispausing">比賽暫停中...</string>
    <string name="gamecontinue">比賽繼續</string>
    <string name="vibrate">震動</string>
    <string name="sound">音效</string>
    <string name="doublecheck">重複確認</string>
    <string name="doublechecksummary">增加好球、壞球等是否出現確認視窗</string>
</resources>